rs/macros/tests/ui/gservice_fails_export_and_route_not_allowed_on_one_impl.stderr
error: multiple `export` or `route` attributes on the same method are not allowed
  --> tests/ui/gservice_fails_export_and_route_not_allowed_on_one_impl.rs:8:5
   |
8  | /     #[route("this")]
9  | |     pub fn this(&self, p1: bool) -> bool {
10 | |         !p1
11 | |     }
   | |_____^

error[E0599]: no method named `this` found for struct `Box<MyService>` in the current scope
 --> tests/ui/gservice_fails_export_and_route_not_allowed_on_one_impl.rs:9:12
  |
9 |     pub fn this(&self, p1: bool) -> bool {
  |            ^^^^ method not found in `Box<MyService>`
