rs/macros/tests/ui/gservice_fails_export_and_route_not_allowed_on_one_impl.rs
use sails_macros::{export, service};

struct MyService;

#[service]
impl MyService {
    #[export(route = "this")]
    #[route("this")]
    pub fn this(&self, p1: bool) -> bool {
        !p1
    }
}

#[tokio::main]
async fn main() {}
